oh my god, i just used 2 hours fixing something that could have taken 2 minutes because i had a file that was too large for github to use. I'm so stupid i cant man

--- a/src/App.css
+++ b/src/App.css
@@ -601,7 +601,7 @@ video {
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 10;
+  z-index: 20000;
 }
 
 .slide-controls .dot {
@@ -613,6 +613,7 @@ video {
   display: inline-block;
   cursor: pointer;
   transition: background-color 0.3s ease;
+  z-index: 99999;
 }
 
 .slide-controls .dot.active {
